Update World Manager